Bug 159169 - Wrong translation for German (because "Orphans" and "Widows" terms are still in Find and Replace > Attributes)
Summary: Wrong translation for German (because "Orphans" and "Widows" terms are still ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
24.2.0.1 rc
Hardware: All All
: medium trivial
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:26.8.0 target:26.2.0.0.beta2
Keywords: difficultyBeginner, easyHack, skillUI, topicCleanup
: 34761 115860 (view as bug list)
Depends on:
Blocks: Find-Search
  Show dependency treegraph
 
Reported: 2024-01-13 15:01 UTC by Harald Berger
Modified: 2026-02-19 07:47 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments
(in German) Dialog "Body Text" and "Attributes" (84.84 KB, image/png)
2024-01-13 15:01 UTC, Harald Berger
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Berger 2024-01-13 15:01:45 UTC
Created attachment 191914 [details]
(in German) Dialog "Body Text" and "Attributes"

Text in German:
In Version 24.2 wurden die Begriffe "Hurenkinder" und "Schusterjungen" geändert in
"Am Absatzbeginn nicht trennen" und "Am Absatzende nicht trennen".
Dies ist z.B. auch in der Absatzvorlage "Fließtext" so ersichtlich.

Die "alten" Begriffe "Hurenkinder" und "Schusterjungen" sind in Version 24.2 aber noch vorhanden als Attribute.
Strg+Alt+F im Dialog "Suche und Ersetzen" auf die Schaltfläche Attribute klicken.
Dort sind die Begriffe "Hurenkinder" und "Schusterjungen" noch als Attribut vorhanden.
"Hurenkinder" und "Schusterjungen" müsssten für Version 24.2 dort noch geändert werden in
"Am Absatzbeginn nicht trennen" und "Am Absatzende nicht trennen".


Text in English:
In version 24.2, the terms in German "Hurenkinder" and "Schusterjungen" were changed to
"Am Absatzbeginn nicht trennen" and "Am Absatzende nicht trennen".
This can also be seen, for example, in the "body text" paragraph style.

However, the "old" terms "Hurenkinder" and "Schusterjungen" are still available as attributes in version 24.2.
Press Ctrl+Alt+F for the "Search and replace" dialog, click on the "Attributes" button.
The terms "Hurenkinder" and "Schusterjungen" are still available there as attributes.
"Hurenkinder" and "Schusterjungen" must be changed there for version 24.2 to
"Am Absatzbeginn nicht trennen" and "Am Absatzende nicht trennen".

-----
With me:
Version: 24.2.0.1.0+ (X86_64) / LibreOffice Community
Build ID: 958089803917f46c81ca818b791c846c072f6fca
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: CL threaded
Comment 1 Julien Nabet 2024-01-14 14:01:03 UTC
Taking a look at translations, I see in cui/messages.po:
  21597 #. DDzY9
  21598 #: cui/uiconfig/ui/textflowpage.ui:590
  21599 msgctxt "textflowpage|checkOrphan"
  21600 msgid "No split at _beginning of paragraph"
  21601 msgstr "Am Absatzbe_ginn nicht trennen"


  21615 #. 2EpT4
  21616 #: cui/uiconfig/ui/textflowpage.ui:615
  21617 msgctxt "textflowpage|checkWidow"
  21618 msgid "No split at _end of paragraph"
  21619 msgstr "Am Absatzen_de nicht trennen"


and:
  10558 #. XpVud
  10559 #: include/svx/svxitems.hrc:60
  10560 msgctxt "RID_ATTR_NAMES"
  10561 msgid "Orphans"
  10562 msgstr "Schusterjungen"
  10563 
  10564 #. NHw9j
  10565 #: include/svx/svxitems.hrc:61
  10566 msgctxt "RID_ATTR_NAMES"
  10567 msgid "Widows"
  10568 msgstr "Hurenkinder"

So you mean English should be changed too?
(let's put UI guys in cc to have their opinion).
Comment 2 Heiko Tietze 2024-01-15 11:24:21 UTC
Discussed at https://listarchives.libreoffice.org/de/users/2020/msg00244.html and up to the locale team.
Comment 3 stragu 2024-01-28 02:31:51 UTC
I see the strings "Orphans" and "Widows" in Edit > Find and Replace > Attributes.

Version: 24.2.0.2 (X86_64) / LibreOffice Community
Build ID: b1fd3a6f0759c6f806568e15c957f97194bbec8f
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Samuel, this likely needs changing, and is a follow-up to your patch for bug 156109 / bug 156795, correct?
Comment 4 Heiko Tietze 2024-01-29 09:59:40 UTC
include/svx/svxitems.hrc "Orphans" SID_ATTR_PARA_ORPHANS, "Widows" SID_ATTR_PARA_WIDOWS

Both need to be translated into what has been done for https://gerrit.libreoffice.org/c/core/+/155769

No split at beginning of paragraph
No split at end of paragraph
Comment 5 Gabor Kelemen (Collabora) 2025-12-03 11:24:08 UTC
This came up again with a customer. Current translations repo master contains these instances:

gabor@voldemort:~/src/core/translations$ gg -iB5 schuster source/de/
source/de/cui/messages.po-
source/de/cui/messages.po-#. NgQD5
source/de/cui/messages.po-#: cui/uiconfig/ui/textflowpage.ui:905
source/de/cui/messages.po-msgctxt "textflowpage|checkOrphan"
source/de/cui/messages.po-msgid "Number of lines, that will be kept together at the beginning of the paragraph (orphan control)."
source/de/cui/messages.po:msgstr "Anzahl an Zeilen, die am Absatzanfang zusammengehalten werden (Schusterjungenregelung)."
--
source/de/editeng/messages.po-
source/de/editeng/messages.po-#. 6aGAq
source/de/editeng/messages.po-#: include/editeng/editrids.hrc:241
source/de/editeng/messages.po-msgctxt "RID_SVXITEMS_ORPHANS_COMPLETE"
source/de/editeng/messages.po-msgid "Orphan control"
source/de/editeng/messages.po:msgstr "Schusterjungenregelung"
--
source/de/helpcontent2/source/text/shared/00.po-msgctxt ""
source/de/helpcontent2/source/text/shared/00.po-"00000005.xhp\n"
source/de/helpcontent2/source/text/shared/00.po-"hd_id3166423\n"
source/de/helpcontent2/source/text/shared/00.po-"help.text"
source/de/helpcontent2/source/text/shared/00.po-msgid "Widows and Orphans"
source/de/helpcontent2/source/text/shared/00.po:msgstr "Schusterjungen und Hurenkinder"
--
source/de/helpcontent2/source/text/shared/00.po-msgctxt ""
source/de/helpcontent2/source/text/shared/00.po-"00000005.xhp\n"
source/de/helpcontent2/source/text/shared/00.po-"par_id3149448\n"
source/de/helpcontent2/source/text/shared/00.po-"help.text"
source/de/helpcontent2/source/text/shared/00.po-msgid "Widows and orphans are historical typography terms, which have been in use for many years. A widow refers to a short line at the end of a paragraph, which when printed, appears alone at the top of the next page. An orphan is, in contrast, the first line of a paragraph printed alone at the bottom of the previous page. In a $[officename] text document you can automatically prevent such occurrences in the desired Paragraph Style. When doing so, you can determine the minimum amount of lines to be kept together on a page."
source/de/helpcontent2/source/text/shared/00.po:msgstr "Schusterjungen und Hurenkinder sind historische Begriffe aus der Typografie, die seit langem verwendet werden. Ein Hurenkind ist die letzte Zeile eines Absatzes, die alleine am oberen Rand der nächsten Seite steht. Ein Schusterjunge ist dagegen die erste Zeile eines Absatzes, die alleine am unteren Rand der Vorseite steht. Mit einem Textdokument von $[officename] können Sie diese unschönen Erscheinungen automatisch für die gewünschte Absatzvorlage vermeiden. Dabei können Sie sogar wählen, wie viele Zeilen mindestens immer zusammen auf einer Seite gehalten werden sollen."
--
source/de/helpcontent2/source/text/shared/01.po-msgctxt ""
source/de/helpcontent2/source/text/shared/01.po-"02100200.xhp\n"
source/de/helpcontent2/source/text/shared/01.po-"hd_id3148388\n"
source/de/helpcontent2/source/text/shared/01.po-"help.text"
source/de/helpcontent2/source/text/shared/01.po-msgid "Orphans"
source/de/helpcontent2/source/text/shared/01.po:msgstr "Schusterjungen"
--
source/de/helpcontent2/source/text/shared/01.po-msgctxt ""
source/de/helpcontent2/source/text/shared/01.po-"02100200.xhp\n"
source/de/helpcontent2/source/text/shared/01.po-"par_id3156737\n"
source/de/helpcontent2/source/text/shared/01.po-"help.text"
source/de/helpcontent2/source/text/shared/01.po-msgid "Finds the <link href=\"text/shared/00/00000005.xhp#widows_and_orphans\"><emph>Orphan Control</emph></link> attribute."
source/de/helpcontent2/source/text/shared/01.po:msgstr "Findet Absätze mit dem Attribut <link href=\"text/shared/00/00000005.xhp#widows_and_orphans\"><emph>Schusterjungenregelung</emph></link>."
--
source/de/helpcontent2/source/text/swriter/01.po-msgctxt ""
source/de/helpcontent2/source/text/swriter/01.po-"05030200.xhp\n"
source/de/helpcontent2/source/text/swriter/01.po-"bm_id2502212\n"
source/de/helpcontent2/source/text/swriter/01.po-"help.text"
source/de/helpcontent2/source/text/swriter/01.po-msgid "<bookmark_value>text flow;at breaks</bookmark_value><bookmark_value>paragraphs;keeping together at breaks</bookmark_value><bookmark_value>protecting;text flow</bookmark_value><bookmark_value>widows</bookmark_value><bookmark_value>orphans</bookmark_value><bookmark_value>block protect, see also widows or orphans</bookmark_value>"
source/de/helpcontent2/source/text/swriter/01.po:msgstr "<bookmark_value>Textfluss; bei Umbrüchen</bookmark_value><bookmark_value>Absätze; zusammenhalten bei Umbrüchen</bookmark_value><bookmark_value>Schützen; Textfluss</bookmark_value><bookmark_value>Hurenkinder</bookmark_value><bookmark_value>Schusterjungen</bookmark_value><bookmark_value>Blockschutz, siehe auch Hurenkinder oder Schusterjungen</bookmark_value>"
--
source/de/helpcontent2/source/text/swriter/01.po-msgctxt ""
source/de/helpcontent2/source/text/swriter/01.po-"05030200.xhp\n"
source/de/helpcontent2/source/text/swriter/01.po-"hd_id3153345\n"
source/de/helpcontent2/source/text/swriter/01.po-"help.text"
source/de/helpcontent2/source/text/swriter/01.po-msgid "Orphan control"
source/de/helpcontent2/source/text/swriter/01.po:msgstr "Schusterjungenregelung"
--
source/de/helpcontent2/source/text/swriter/01.po-msgctxt ""
source/de/helpcontent2/source/text/swriter/01.po-"05030200.xhp\n"
source/de/helpcontent2/source/text/swriter/01.po-"par_id3155860\n"
source/de/helpcontent2/source/text/swriter/01.po-"help.text"
source/de/helpcontent2/source/text/swriter/01.po-msgid "<link href=\"text/shared/00/00000005.xhp#widows_and_orphans\">Orphans</link>."
source/de/helpcontent2/source/text/swriter/01.po:msgstr "<link href=\"text/shared/00/00000005.xhp#widows_and_orphans\">Schusterjungen</link>."
--
source/de/svx/messages.po-
source/de/svx/messages.po-#. XpVud
source/de/svx/messages.po-#: include/svx/svxitems.hrc:60
source/de/svx/messages.po-msgctxt "RID_ATTR_NAMES"
source/de/svx/messages.po-msgid "Orphans"
source/de/svx/messages.po:msgstr "Schusterjungen"
--
source/de/sw/messages.po-
source/de/sw/messages.po-#. kczeF
source/de/sw/messages.po-#: sw/inc/inspectorproperties.hrc:238
source/de/sw/messages.po-msgctxt "RID_ATTRIBUTE_NAMES_MAP"
source/de/sw/messages.po-msgid "Para Orphans"
source/de/sw/messages.po:msgstr "Absatz: Schusterjungen"



gabor@voldemort:~/src/core/translations$ gg -iB5 huren source/de/
source/de/cui/messages.po-
source/de/cui/messages.po-#. rjBWx
source/de/cui/messages.po-#: cui/uiconfig/ui/textflowpage.ui:930
source/de/cui/messages.po-msgctxt "textflowpage|checkOrphan"
source/de/cui/messages.po-msgid "Number of lines, that will be kept together at the end of the paragraph (widow control)."
source/de/cui/messages.po:msgstr "Anzahl an Zeilen, die am Ende des Absatzes zusammengehalten werden (Hurenkinderregelung)."
--
source/de/editeng/messages.po-
source/de/editeng/messages.po-#. JLCaB
source/de/editeng/messages.po-#: include/editeng/editrids.hrc:240
source/de/editeng/messages.po-msgctxt "RID_SVXITEMS_WIDOWS_COMPLETE"
source/de/editeng/messages.po-msgid "Widow control"
source/de/editeng/messages.po:msgstr "Hurenkinderregelung"
--
source/de/helpcontent2/source/text/shared/00.po-msgctxt ""
source/de/helpcontent2/source/text/shared/00.po-"00000005.xhp\n"
source/de/helpcontent2/source/text/shared/00.po-"hd_id3166423\n"
source/de/helpcontent2/source/text/shared/00.po-"help.text"
source/de/helpcontent2/source/text/shared/00.po-msgid "Widows and Orphans"
source/de/helpcontent2/source/text/shared/00.po:msgstr "Schusterjungen und Hurenkinder"
--
source/de/helpcontent2/source/text/shared/00.po-msgctxt ""
source/de/helpcontent2/source/text/shared/00.po-"00000005.xhp\n"
source/de/helpcontent2/source/text/shared/00.po-"par_id3149448\n"
source/de/helpcontent2/source/text/shared/00.po-"help.text"
source/de/helpcontent2/source/text/shared/00.po-msgid "Widows and orphans are historical typography terms, which have been in use for many years. A widow refers to a short line at the end of a paragraph, which when printed, appears alone at the top of the next page. An orphan is, in contrast, the first line of a paragraph printed alone at the bottom of the previous page. In a $[officename] text document you can automatically prevent such occurrences in the desired Paragraph Style. When doing so, you can determine the minimum amount of lines to be kept together on a page."
source/de/helpcontent2/source/text/shared/00.po:msgstr "Schusterjungen und Hurenkinder sind historische Begriffe aus der Typografie, die seit langem verwendet werden. Ein Hurenkind ist die letzte Zeile eines Absatzes, die alleine am oberen Rand der nächsten Seite steht. Ein Schusterjunge ist dagegen die erste Zeile eines Absatzes, die alleine am unteren Rand der Vorseite steht. Mit einem Textdokument von $[officename] können Sie diese unschönen Erscheinungen automatisch für die gewünschte Absatzvorlage vermeiden. Dabei können Sie sogar wählen, wie viele Zeilen mindestens immer zusammen auf einer Seite gehalten werden sollen."
--
source/de/helpcontent2/source/text/shared/01.po-msgctxt ""
source/de/helpcontent2/source/text/shared/01.po-"02100200.xhp\n"
source/de/helpcontent2/source/text/shared/01.po-"hd_id3145203\n"
source/de/helpcontent2/source/text/shared/01.po-"help.text"
source/de/helpcontent2/source/text/shared/01.po-msgid "Widows"
source/de/helpcontent2/source/text/shared/01.po:msgstr "Hurenkinder"
--
source/de/helpcontent2/source/text/shared/01.po-msgctxt ""
source/de/helpcontent2/source/text/shared/01.po-"02100200.xhp\n"
source/de/helpcontent2/source/text/shared/01.po-"par_id3153105\n"
source/de/helpcontent2/source/text/shared/01.po-"help.text"
source/de/helpcontent2/source/text/shared/01.po-msgid "Finds the <emph>Widow Control</emph> attribute."
source/de/helpcontent2/source/text/shared/01.po:msgstr "Findet Absätze mit dem Attribut <emph>Hurenkinderregelung</emph>."
--
source/de/helpcontent2/source/text/swriter/01.po-msgctxt ""
source/de/helpcontent2/source/text/swriter/01.po-"05030200.xhp\n"
source/de/helpcontent2/source/text/swriter/01.po-"bm_id2502212\n"
source/de/helpcontent2/source/text/swriter/01.po-"help.text"
source/de/helpcontent2/source/text/swriter/01.po-msgid "<bookmark_value>text flow;at breaks</bookmark_value><bookmark_value>paragraphs;keeping together at breaks</bookmark_value><bookmark_value>protecting;text flow</bookmark_value><bookmark_value>widows</bookmark_value><bookmark_value>orphans</bookmark_value><bookmark_value>block protect, see also widows or orphans</bookmark_value>"
source/de/helpcontent2/source/text/swriter/01.po:msgstr "<bookmark_value>Textfluss; bei Umbrüchen</bookmark_value><bookmark_value>Absätze; zusammenhalten bei Umbrüchen</bookmark_value><bookmark_value>Schützen; Textfluss</bookmark_value><bookmark_value>Hurenkinder</bookmark_value><bookmark_value>Schusterjungen</bookmark_value><bookmark_value>Blockschutz, siehe auch Hurenkinder oder Schusterjungen</bookmark_value>"
--
source/de/helpcontent2/source/text/swriter/01.po-msgctxt ""
source/de/helpcontent2/source/text/swriter/01.po-"05030200.xhp\n"
source/de/helpcontent2/source/text/swriter/01.po-"hd_id3149180\n"
source/de/helpcontent2/source/text/swriter/01.po-"help.text"
source/de/helpcontent2/source/text/swriter/01.po-msgid "Widow control"
source/de/helpcontent2/source/text/swriter/01.po:msgstr "Hurenkinderregelung"
--
source/de/svx/messages.po-
source/de/svx/messages.po-#. NHw9j
source/de/svx/messages.po-#: include/svx/svxitems.hrc:61
source/de/svx/messages.po-msgctxt "RID_ATTR_NAMES"
source/de/svx/messages.po-msgid "Widows"
source/de/svx/messages.po:msgstr "Hurenkinder"
--
source/de/sw/messages.po-
source/de/sw/messages.po-#. u8Jc6
source/de/sw/messages.po-#: sw/inc/inspectorproperties.hrc:252
source/de/sw/messages.po-msgctxt "RID_ATTRIBUTE_NAMES_MAP"
source/de/sw/messages.po-msgid "Para Widows"
source/de/sw/messages.po:msgstr "Absatz: Hurenkinder"
Comment 6 Commit Notification 2025-12-11 21:27:53 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7136d7be94748f7cb3d89d24a909b571c5ff4653

tdf#159169 Avoid typesetter language 'orphans' and 'widows'

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-12-11 21:28:57 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/help/commit/7d5e9ba2a38b8d48f7bb0f3d9757b0cd93a836f9

tdf#159169 Update documentation to refer to new attribute names
Comment 8 Commit Notification 2025-12-12 04:20:59 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/a571e8820e2b7a12d3155a6154be9a412f10fd17

tdf#159169 Avoid typesetter language 'orphans' and 'widows'

It will be available in 26.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2025-12-12 04:21:02 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/help/commit/e7b3fa0fd241848ed409919871f2c801125a219c

tdf#159169 Update documentation to refer to new attribute names
Comment 10 Heiko Tietze 2026-02-19 07:47:27 UTC
*** Bug 34761 has been marked as a duplicate of this bug. ***
Comment 11 Heiko Tietze 2026-02-19 07:47:32 UTC
*** Bug 115860 has been marked as a duplicate of this bug. ***