tdf#159169 Avoid typesetter language 'orphans' and 'widows'

Similiar to 47edf86a62784aa275de7cc89df01a4fcd4e90c8, use descriptive
language to make it obvious what these options do.

Change-Id: Idacb56acfc43546a574257ca989710d4de1ac2f2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195445
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@collabora.com>
(cherry picked from commit 7136d7be94748f7cb3d89d24a909b571c5ff4653)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195500
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>